--- a/PaaS/Docs/SDK文档/Web/互动白板接入文档.md
+++ b/PaaS/Docs/SDK文档/Web/互动白板接入文档.md
@@ -811,8 +811,8 @@ teduBoard.applyFileTranscode(fileInfo, transcodeConfig);
 | fileInfo  | Object | 是 | 文件信息 |
 | fileInfo.data | File | 是 | 文件对象，通常为input标签的value值 |
 | fileInfo.userData | String | 否 | 该参数会在上传文件进度，转码任务发起成功事件回调中透传回来 |
-| transcodeConfig  | Object | 是 | 转码参数 |
-| transcodeConfig.minResolution | String | 是 |最小分辨率，如960x540，中间分隔符为x  |
+| transcodeConfig  | Object | 否 | 转码参数 |
+| transcodeConfig.minResolution | String | 否 |最小分辨率，如960x540，中间分隔符为x  |
 | transcodeConfig.isStaticPPT | Boolean | 否 | 当isStaticPPT为false时，后缀名为.ppt或.pptx的文档会动态转码成HTML5页面，其他格式的文档会静态转码成图片，如果isStaticPPT为true，所有格式的文档会静态转码成图片 |
 | transcodeConfig.thumbnailResolution | String | 否 | 缩略图分辨率，如200x200，中间分隔符为x。所有转图片的文件都默认支持缩略图，但不支持指定分辨率。 |
 
