--- a/PaaS/Docs/SDK文档/Web/互动白板接入文档.md
+++ b/PaaS/Docs/SDK文档/Web/互动白板接入文档.md
@@ -78,7 +78,7 @@
 | getOvalDrawMode         | 获取椭圆绘制模式                        |
 | getThumbnailImages         | 根据文件id获取文件的缩略图            |
 | applyFileTranscode         | 申请文件转码            |
-| getFileTranscodeStatus         | 查询转码文件状态            |
+| getFileTranscodeProgress         | 查询转码文件进度            |
 
 ## 实例化白板
 
@@ -839,7 +839,7 @@ teduBoard.getFileTranscodeProgress(data)
 | 参数 | 类型   | 是否必填 | 说明    |
 | ---- | ------ | -------- | ------- |
 | data  | Object | 是 | 文件信息 |
-| data.taskId | String | 是 | 申请文件转码成功后，会在TEB_TRANSCODE事件回调tasdkId |
+| data.taskId | String | 是 | 申请文件转码成功后，会在TEB_TRANSCODEPROGRESS事件回调tasdkId |
 
 ```
 // 示例
