修改web端互动白板文档

--- a/PaaS/Docs/SDK文档/Web/互动白板接入文档.md
+++ b/PaaS/Docs/SDK文档/Web/互动白板接入文档.md
@@ -1083,16 +1083,15 @@ PPT动画步数回调
 
 | 回调参数 | 类型   | 说明           |
 | -------- | ------ | -------------- |
-| status      | String | |
-| data      | Object | 回调数据 |
+| data | Object | 回调结果 |
 | data.code | String | 错误码 |
 | data.message| String | 错误信息 | 
-| data.Status | String | ERROR： 转码错误<br/>CREATE：发起转码任务<br/>QUEUED：排队中<br/>PROCESSING：转码中<br/>FINISHED：转码完成 |
-| data.TaskId | String | 任务id |
-| data.Pages | Number | 总页数 |
-| data.Progress | Number | 进度 |
-| data.Resolution | String | 转码后分辨率 |
-| data.ResultUrl | String | 转码后的url |
-| data.ThumbnailResolution | String | 缩略图分辨率 |
-| data.ThumbnailUrl | String | 缩略图的url，添加到白板后可通过getThumbnailImages获取完整的缩略图 |
-| data.Title | String | 文件名 |
+| data.status | String | ERROR： 转码错误<br/>CREATED：发起转码任务<br/>QUEUED：排队中<br/>Pdata.ROCESSING：转码中<br/>FINISHED：转码完成 |
+| data.taskId | String | 任务id |
+| data.pages | Number | 总页数 |
+| data.progress | Number | 进度 |
+| data.resolution | String | 转码后分辨率 |
+| data.resultUrl | String | 转码后的url |
+| data.thumbnailResolution | String | 缩略图分辨率 |
+| data.thumbnailUrl | String | 缩略图的url，添加到白板后可通过getThumbnailImages获取完整的缩略图 |
+| data.title | String | 文件名 |
