修复错误的文案

--- a/PaaS/Docs/SDK文档/Web/互动白板接入文档.md
+++ b/PaaS/Docs/SDK文档/Web/互动白板接入文档.md
@@ -1086,7 +1086,7 @@ PPT动画步数回调
 | data | Object | 回调结果 |
 | data.code | String | 错误码 |
 | data.message| String | 错误信息 | 
-| data.status | String | ERROR： 转码错误<br/>CREATED：发起转码任务<br/>QUEUED：排队中<br/>Pdata.ROCESSING：转码中<br/>FINISHED：转码完成 |
+| data.status | String | ERROR： 转码错误<br/>CREATED：发起转码任务<br/>QUEUED：排队中<br/>ROCESSING：转码中<br/>FINISHED：转码完成 |
 | data.taskId | String | 任务id |
 | data.pages | Number | 总页数 |
 | data.progress | Number | 进度 |
