web端修改转码文档

--- a/PaaS/Docs/SDK文档/Web/互动白板接入文档.md
+++ b/PaaS/Docs/SDK文档/Web/互动白板接入文档.md
@@ -831,7 +831,7 @@ teduBoard.applyFileTranscode({
 
 #### 查询转码文件进度
 
-> 调用此接口，会回调TEB_TRANSCODEPROGRESS事件；通常情况不需要调用该接口。
+> 调用此接口会回调TEB_TRANSCODEPROGRESS事件；通常情况不需要调用该接口。
 
 ```
 teduBoard.getFileTranscodeProgress(data)
@@ -1086,7 +1086,7 @@ PPT动画步数回调
 | data | Object | 回调结果 |
 | data.code | String | 错误码 |
 | data.message| String | 错误信息 | 
-| data.status | String | ERROR： 转码错误<br/>CREATED：发起转码任务<br/>QUEUED：排队中<br/>ROCESSING：转码中<br/>FINISHED：转码完成 |
+| data.status | String | ERROR： 转码错误<br/>UPLOADING：文件上传中<br/>CREATED：发起转码任务<br/>QUEUED：排队中<br/>ROCESSING：转码中<br/>FINISHED：转码完成 |
 | data.taskId | String | 任务id |
 | data.pages | Number | 总页数 |
 | data.progress | Number | 进度 |
@@ -1095,3 +1095,4 @@ PPT动画步数回调
 | data.thumbnailResolution | String | 缩略图分辨率 |
 | data.thumbnailUrl | String | 缩略图的url，添加到白板后可通过getThumbnailImages获取完整的缩略图 |
 | data.title | String | 文件名 |
+| data.userData | String | 透传申请转码接口的 userData |
