更新错误码20090-20099为内部错误

--- a/PaaS/Docs/实时录制.md
+++ b/PaaS/Docs/实时录制.md
@@ -976,4 +976,4 @@ OmittedDuration 对象格式
 | 20005 | 数据读取失败                   | 请检查请求中的 TaskId 或联系客服人员                              |
 | 20011 | 发送停止任务请求时录制任务已经结束 | 可能由于长时间房间内没有用户音视频上行，实时录制服务自动停止录制      |
 | 20013 | 实时录制用户已被占用            | 请重新生成一个不同的实时录制用户 UserId 与 UserSig                  |
-| 20099 | 内部错误                      | 请联系客服人员                                                |
+| 20090-20099 | 内部错误     | 请联系客服人员                                                 |
