--- a/PaaS/Docs/文档转码.md
+++ b/PaaS/Docs/文档转码.md
@@ -28,10 +28,10 @@
 sign = md5(TicKey+expire_time)
 ```
 
-| 参数名      | 描述                             |
-|:------------|:---------------------------------|
-| TicKey      | [服务开通](#jump1) 中获取的密钥 TicKey           |
-| expire_time | Unix 时间戳，单位秒，签名过期时间 |
+| 参数名      | 描述                                   |
+| :---------- | :------------------------------------- |
+| TicKey      | [服务开通](#jump1) 中获取的密钥 TicKey |
+| expire_time | Unix 时间戳，单位秒，签名过期时间      |
 
  签名举例：
 1. 当前时间戳是 `1548247717`；
@@ -78,9 +78,9 @@ func GetMD5Hash(data []byte) string {
 
 发布一个文档转码任务。
 
-| 请求基本信息 | 描述                                               |
-|:-----------|:--------------------------------------------------|
-| 方法        | POST                                              |
+| 请求基本信息 | 描述                                              |
+| :----------- | :------------------------------------------------ |
+| 方法         | POST                                              |
 | 请求 URL     | https://iclass.api.qcloud.com/transcode/v1/create |
 | 请求 Header  | Content-Type:application/json                     |
 
@@ -88,18 +88,18 @@ func GetMD5Hash(data []byte) string {
 
 URL 参数
 
-| 参数名   | 描述                                              |
-|:---------|:--------------------------------------------------|
-| sdkappid | 客户的 sdkappid                                    |
-| sign     | 用于鉴权的签名                                    |
-| expire_time | 用于鉴权的签名过期时间，Unix 时间戳，单位秒       |
-| random   | 随机 int32 正整数，每次请求都需要带上，用于定位问题 |
+| 参数名      | 描述                                                |
+| :---------- | :-------------------------------------------------- |
+| sdkappid    | 客户的 sdkappid                                     |
+| sign        | 用于鉴权的签名                                      |
+| expire_time | 用于鉴权的签名过期时间，Unix 时间戳，单位秒         |
+| random      | 随机 int32 正整数，每次请求都需要带上，用于定位问题 |
 
 Body 参数（JSON 格式）
 
-| 参数名         | 类型    | 描述                                                                                                                                                                     |
-|:--------------|:-------|:------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| url           | string | 在 [上传文档并获取链接](#jump4.1) 中获取的下载 URL，请检查 URL 的访问权限                                                                                                          |
+| 参数名        | 类型   | 描述                                                                                                                                                                                                    |
+| :------------ | :----- | :------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| url           | string | 在 [上传文档并获取链接](#jump4.1) 中获取的下载 URL，请检查 URL 的访问权限                                                                                                                               |
 | is_static_ppt | bool   | 是否为静态PPT，默认为false，当`is_static_ppt`为false时，后缀名为`.ppt`或`.pptx`的文档会动态转码成`HTML5`页面，其他格式的文档会静态转码成图片，如果`is_static_ppt`为true，所有格式的文档会静态转码成图片 |
 
 请求示例：
@@ -121,10 +121,10 @@ Body 参数（JSON 格式）
 
 返回参数（JSON 格式）
 
-| 参数名     | 类型   | 描述                                       |
-|:-----------|:-------|:-------------------------------------------|
-| error_code | int    | 错误码                                     |
-| error_msg  | string | 错误信息                                   |
+| 参数名     | 类型   | 描述                                        |
+| :--------- | :----- | :------------------------------------------ |
+| error_code | int    | 错误码                                      |
+| error_msg  | string | 错误信息                                    |
 | task_id    | string | 任务的唯一标识 ID，用于查询该转码任务的进度 |
 
 返回示例：
@@ -141,29 +141,29 @@ Body 参数（JSON 格式）
 
 #### 接口说明
 
-| 请求基本信息 | 描述                                          |
-|:-------------|:----------------------------------------------|
-| 方法         | POST                                          |
-| 请求 URL      | https://iclass.api.qcloud.com/transcode/v1/query |
-| 请求 Header   | Content-Type:application/json                 |
+| 请求基本信息 | 描述                                             |
+| :----------- | :----------------------------------------------- |
+| 方法         | POST                                             |
+| 请求 URL     | https://iclass.api.qcloud.com/transcode/v1/query |
+| 请求 Header  | Content-Type:application/json                    |
 
 
 #### 请求参数
 
 URL 参数
 
-| 参数名   | 描述                                                                    |
-|:---------|:------------------------------------------------------------------------|
-| sdkappid | 客户的 sdkappid                                                          |
-| sign     | 用于鉴权的签名                                                          |
-| expire_time | 用于鉴权的签名过期时间，Unix 时间戳，单位秒       |
-| random   | 随机 int32 正整数，每次请求都需要带上，定位问题时需要提供该次请求的 random |
+| 参数名         | 描述                                                                          |
+|  :-----------  |  :--------------------------------------------------------------------------  |
+| sdkappid       | 客户的 sdkappid                                                              |
+| sign           | 用于鉴权的签名                                                                |
+| expire_time | 用于鉴权的签名过期时间，Unix 时间戳，单位秒                                                         |
+| random         | 随机 int32 正整数，每次请求都需要带上，定位问题时需要提供该次请求的 random |
 
 Body 参数（JSON 格式）
 
-| 参数名      | 类型   | 描述                  |
-|:------------|:-------|:----------------------|
-| task_id     | string | 文档转码任务的唯一标识 |
+| 参数名  | 类型   | 描述                   |
+| :------ | :----- | :--------------------- |
+| task_id | string | 文档转码任务的唯一标识 |
 
 请求示例：
 请将参数替换为实际值。
@@ -181,17 +181,17 @@ Body 参数（JSON 格式）
 
 返回参数（JSON 格式）
 
-| 参数名      | 类型   | 描述                                                                                                                            |
-|:-----------|:-------|:--------------------------------------------------------------------------------------------------------------------------------|
-| error_code | int    | 错误码                                                                                                                           |
-| error_msg  | string | 错误信息                                                                                                                         |
-| task_id    | string | 任务的唯一标识 ID                                                                                                                 |
-| status     | string | 任务状态                                                                                                                         |
-| progress   | int    | 0-100的整数表示转码当前进度                                                                                                        |
+| 参数名     | 类型   | 描述                                                                                                                                                     |
+| :--------- | :----- | :------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| error_code | int    | 错误码                                                                                                                                                   |
+| error_msg  | string | 错误信息                                                                                                                                                 |
+| task_id    | string | 任务的唯一标识 ID                                                                                                                                        |
+| status     | string | 任务状态                                                                                                                                                 |
+| progress   | int    | 0-100的整数表示转码当前进度                                                                                                                              |
 | result_url | string | 转码结果，如果是PPT动态转码结果为H5页面URL，如果是静态转码结果为转码后静态图片的文件路径，请将此结果配合白板SDK的`addTranscodeFile`接口使用, 有效期3个月 |
-| resolution | string | 文档的分辨率                                                                                                                      |
-| pages      | int    | 文档的总页数                                                                                                                      |
-| title      | string | 文档的文件名                                                                                                                      |
+| resolution | string | 文档的分辨率                                                                                                                                             |
+| pages      | int    | 文档的总页数                                                                                                                                             |
+| title      | string | 文档的文件名                                                                                                                                             |
 
 返回示例：
 
@@ -211,8 +211,8 @@ Body 参数（JSON 格式）
 
 转码任务可能的状态如下所示：
 
-| 状态     | 描述             |
-|:-----------|:-----------------|
+| 状态       | 描述             |
+| :--------- | :--------------- |
 | queued     | 正在排队等待转换 |
 | processing | 转换中           |
 | finished   | 转换完成         |
@@ -224,11 +224,11 @@ Body 参数（JSON 格式）
 
 #### 接口说明
 
-| 请求基本信息 | 描述                                             |
-|:-------------|:-------------------------------------------------|
-| 方法         | POST                                             |
-| 请求 URL      | https://iclass.api.qcloud.com/transcode/v1/callback |
-| 请求 Header   | Content-Type:application/json                    |
+| 请求基本信息 | 描述                                                |
+| :----------- | :-------------------------------------------------- |
+| 方法         | POST                                                |
+| 请求 URL     | https://iclass.api.qcloud.com/transcode/v1/callback |
+| 请求 Header  | Content-Type:application/json                       |
 
 
 #### 请求参数
@@ -244,9 +244,9 @@ URL 参数
 
 Body 参数（JSON 格式）
 
-| 参数名       | 类型    | 描述                                                                                                           |
-|:------------|:-------|:--------------------------------------------------------------------------------------------------------------|
-| callback    | string | 文档转码进度回调地址，如果传空字符串会删除原来的回调地址配置，回调地址仅支持 http 或 https 协议，即回调地址以`http://`或`https://`开头 |
+| 参数名   | 类型   | 描述                                                                                                                                   |
+| :------- | :----- | :------------------------------------------------------------------------------------------------------------------------------------- |
+| callback | string | 文档转码进度回调地址，如果传空字符串会删除原来的回调地址配置，回调地址仅支持 http 或 https 协议，即回调地址以`http://`或`https://`开头 |
 
 请求示例：
 请将参数替换为实际值。
@@ -265,7 +265,7 @@ Body 参数（JSON 格式）
 返回参数（JSON 格式）
 
 | 参数名     | 类型   | 描述     |
-|:-----------|:-------|:---------|
+| :--------- | :----- | :------- |
 | error_code | int    | 错误码   |
 | error_msg  | string | 错误信息 |
 
@@ -290,37 +290,37 @@ Body 参数（JSON 格式）
 
 
 | 请求基本信息 | 描述                          |
-|:-------------|:------------------------------|
+| :----------- | :---------------------------- |
 | 方法         | POST                          |
-| 请求 Header   | Content-Type:application/json |
+| 请求 Header  | Content-Type:application/json |
 
 
 #### 回调请求参数
 
 URL 参数
 
-| 参数名       | 描述                                                           |
-|:------------|:--------------------------------------------------------------|
-| sign        | 用于鉴权的签名，需对该签名做校验，判断是否为有效请求                   |
-| expire_time | 用于鉴权的签名过期时间，Unix 时间戳，单位秒                          |
+| 参数名      | 描述                                                                       |
+| :---------- | :------------------------------------------------------------------------- |
+| sign        | 用于鉴权的签名，需对该签名做校验，判断是否为有效请求                       |
+| expire_time | 用于鉴权的签名过期时间，Unix 时间戳，单位秒                                |
 | random      | 随机 int32 正整数，每次请求都需要带上，定位问题时需要提供该次请求的 random |
-| sdkappid    | 客户的 sdkappid                                                 |
+| sdkappid    | 客户的 sdkappid                                                            |
 
 Body 参数（JSON 格式）
 
-| 参数名      | 类型   | 描述                            |
-|:-----------|:-------|:--------------------------------|
-| error_code | int    | 错误码                           |
-| error_msg  | string | 错误信息                         |
-| timestamp  | int    | 回调发送的时间戳                  |
-| task_id    | string | 任务的唯一标识 ID                 |
-| task_type  | string | 文档转码任务类型固定为`transcode`  |
-| status     | string | 任务状态                         |
-| progress   | int    | 0-100的整数表示转码当前进度        |
+| 参数名     | 类型   | 描述                                                                                                                                                     |
+| :--------- | :----- | :------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| error_code | int    | 错误码                                                                                                                                                   |
+| error_msg  | string | 错误信息                                                                                                                                                 |
+| timestamp  | int    | 回调发送的时间戳                                                                                                                                         |
+| task_id    | string | 任务的唯一标识 ID                                                                                                                                        |
+| task_type  | string | 文档转码任务类型固定为`transcode`                                                                                                                        |
+| status     | string | 任务状态                                                                                                                                                 |
+| progress   | int    | 0-100的整数表示转码当前进度                                                                                                                              |
 | result_url | string | 转码结果，如果是PPT动态转码结果为H5页面URL，如果是静态转码结果为转码后静态图片的文件路径，请将此结果配合白板SDK的`addTranscodeFile`接口使用, 有效期3个月 |
-| resolution | string | 文档的分辨率                      |
-| title      | string | 文档的文件名                      |
-| pages      | int    | 文档的总页数                      |
+| resolution | string | 文档的分辨率                                                                                                                                             |
+| title      | string | 文档的文件名                                                                                                                                             |
+| pages      | int    | 文档的总页数                                                                                                                                             |
 
 回调示例：
 
@@ -357,98 +357,98 @@ Body 参数（JSON 格式）
 
 #### 文档转码过程错误码
 
-| 错误码 | 错误描述                        | 解决方法                  |
-|:------|:-------------------------------|:-------------------------|
-| 0     | 任务执行成功                     |         -                 |
-| -1     | ppt 下载的 url 格式错误                 | 请检查 PPT 下载 URL                                         |
-| -2     | ppt 打开过程中发生未知错误            | 请检查 PPT 格式是否正确                                    |
-| -3     | ppt 打开超时                           | 请检查 PPT 格式是否正确或重试                                    |
-| -4     | ppt 打开无响应                        | 请检查 PPT 格式是否正确或重试                                    |
-| -5     | ppt 文件被加密                        | 不支持转换已加密的 PPT                                    |
-| -6     | 未知 ppt 格式                           | 请检查 PPT 格式是否正确                                    |
-| -7     | ppt 打开时发生异常                    | 请检查 PPT 格式是否正确                                    |
-| -8     | ppt 为只读格式                        | 不支持只读 ppt，请检查 PPT 格式是否正确                     |
-| -9     | ppt 转码失败                          | ppt转换为pptx失败; 将ppt用PowerPoint手动转为pptx,确认打开pptx不会有任何报错后，</br>在使用转换后的pptx重新发起转码                                    |
-| -10    | pptx 格式解析错误                     | 请检查 PPT 格式是否正确                                    |
-| -11    | ppt 下载失败，未知错误                | 请检查 ppt 下载 URL 是否有效                                 |
-| -12    | h5 上传失败                           | 请联系客服人员或重试                                     |
-| -13    | ppt 转换服务未加载                    | 请联系客服人员                                           |
-| -14    | ppt 转码过程中，发生错误              | 请根据错误信息中的页数，检查该页中的元素或动画组合是否正确;</br>如果错误信息中，无具体页数“unknown page”，则代表无法获取某一页转换失败，该 ppt 不支持转换|
-| -15    | ppt 转码文件生成失败                  | 请联系客服人员或重试                                     |
-| -16    | ppt 转换模式异常                      | PPT 格式不支持或联系客服人员                              |
-| -17    | ppt 超过最大的转换页数限制（目前为500） | 不支持转换超过500页的 PPT                                 |
-| -18    | ppt 转换失败，错误未知                | ppt 格式不支持或联系客服人员                              |
-| -19    | ppt 被加密                            | 不支持加密的 PPT                                          |
-| -20    | ppt 未知属性错误                      | 请检查 PPT 格式是否正确                                    |
-| -21    | ppt 检测属性超时                      | 请检查 PPT 格式是否正确                                    |
-| -22    | ppt 转换异常                          | 请检查 PPT 格式是否正确或重试                              |
-| -23    | ppt 下载链接含有非法字符              | 请检查 ppt 下载链接是否正确                                |
-| -24    | ppt 下载链接打开失败                  | 请检查 ppt 下载地址是否有效                                |
-| -25    | ppt 下载链接打开超时                  | 请检查 ppt下载链接是否有效或下载服务器网络状况          |
-| -26    | ppt 下载数据失败                      | 请检查 ppt下载服务器网络状况                              |
-| -27    | ppt 下载数据超时                      | 请检查 ppt下载服务器网络状况或是否 ppt 过大，导致下载超时 |
-| -28    | ppt 包含自动翻页                      | 请根据错误信息中的页数,检查 该页 和 该页之后的页 是否有自动翻页;</br>如果错误信息中，无具体页数"Page unkown"，则代表无法获取某一页含有自动翻页，请手动确认或联系管理员 |
-| -101  | task info 文件读取失败           | 请联系维护人员             |
-| -102  | task info 格式不正确             | 请联系维护人员             |
-| -103  | task info 的 error_code 不等于0 | 请联系维护人员             |
-| -104  | task 的 url 为空                | 请联系维护人员             |
-| -105  | task 的 下载url错误              | 请检查转码文件下载链接       |
-| -106  | 不支持的文件名后缀                | 请检查文件名后缀名          |
-| -107  | 文件下载失败，未知错误             | 请检查下载链接地址是否有效   |
-| -108  | 下载链接非法                     | 请检查转码文件下载链接       |
-| -109  | 下载链接打开失败                  | 请检查下载链接地址是否有效   |
-| -110  | 下载链接打开超时                  | 请检查下载链接地址是否有效   |
-| -111  | 下载失败                        | 请检查下载链接地址是否有效   |
-| -112  | 下载超时                        | 请检查下载链接带宽          |
-| -113  | 本地临时文件夹创建失败             | 请联系维护人员             |
-| -114  | 文件上传转码后台失败              | 请联系维护人员             |
-| -115  | cos 请求转码失败                 | 文件格式不支持             |
-| -116  | cos 请求转码失败                 | 文件格式不支持             |
-| -117  | cos 转码失败超时                 | 文件格式不支持             |
-| -118  | cos 转码过程中失败               | 文件格式不支持             |
-| -119  | 上传转码后的文件，到 cdn cos 失败  | 请联系维护人员或重试      |
-| -120  | cos 转码，未知错误               | 文件格式不支持             |
-| -121  | 超过最大页数                     | 不支持超过500页的文件转码   |
-| -122  | cos 转码打开本地文件失败     | 请联系维护人员 或 重试   |
-| -123  | cos 转码写本地文件失败                     | 请联系维护人员 或 重试   |
-| -124  | cos 转码文件内容为空                     | 请联系维护人员 或 重试   |
-| -125  | cos 转码获取分辨率失败                     | 请联系维护人员 或 重试   |
-| -126  | pdf打开失败                     | pdf文件格式错误或pdf加密，不支持转码   |
-| -127  | pdf 文件加密                     | 不支持加密pdf文件转码   |
-| -128  | 获取pdf页数失败                     | pdf文件格式不支持   |
-| -129  | pdf 转码未知错误                     | pdf文件格式不支持   |
-| -3001 | 转换失败或者任务创建失败.          | 文件格式不支持             |
-| -3002 | 服务器过载，转换队列过长           | 请稍后重试转码             |
-| -3003 | 转换超时                        | 文件格式不支持             |
-| -3004 | 文件不存在                       | 请联系维护人员             |
-| -3005 | 参数错误                        | 请联系维护人员             |
-| -3006 | 文档加密                        | 不支持加密的文件转换         |
-| -3007 | 强制结束，超时强制结束生成了部分数据 | 文件格式不支持             |
-| -3008 | 文件长度为0                      | 文件格式不支持             |
-| -3009 | 加载配置文件失败                  | 请联系维护人员             |
-| -3010 | 请求信息组包失败                  | 请联系维护人员             |
-| -3011 | 文档类型不支持                   | 文件格式不支持             |
-| -3012 | pdf 文件转换失败                  | 文件格式不支持             |
-| -3013 | 处理失败或者请求页超过             | 文件格式不支持             |
-| -3014 | 转换成功读取失败                  | 请联系维护人员             |
-| -3015 | 转换成功，但请求页超过了总页数      | 无                       |
-| -3016 | 压缩文档转换失败                  | 无                       |
-| -3017 | 文档传输中                       | 请稍后重试转码             |
-| -3018 | 下载文件分片失败                  | 请稍后重试转码             |
-| -3019 | 文件落地失败                     | 请稍后重试转码             |
-| -3020 | 没找到相应的预览任务              | 请稍后重试转码             |
+| 错误码 | 错误描述                                | 解决方法                                                                                                                                                               |
+| :----- | :-------------------------------------- | :--------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| 0      | 任务执行成功                            | -                                                                                                                                                                      |
+| -1     | ppt 下载的 url 格式错误                 | 请检查 PPT 下载 URL                                                                                                                                                    |
+| -2     | ppt 打开过程中发生未知错误              | 请检查 PPT 格式是否正确                                                                                                                                                |
+| -3     | ppt 打开超时                            | 请检查 PPT 格式是否正确或重试                                                                                                                                          |
+| -4     | ppt 打开无响应                          | 请检查 PPT 格式是否正确或重试                                                                                                                                          |
+| -5     | ppt 文件被加密                          | 不支持转换已加密的 PPT                                                                                                                                                 |
+| -6     | 未知 ppt 格式                           | 请检查 PPT 格式是否正确                                                                                                                                                |
+| -7     | ppt 打开时发生异常                      | 请检查 PPT 格式是否正确                                                                                                                                                |
+| -8     | ppt 为只读格式                          | 不支持只读 ppt，请检查 PPT 格式是否正确                                                                                                                                |
+| -9     | ppt 转码失败                            | ppt转换为pptx失败; 将ppt用PowerPoint手动转为pptx,确认打开pptx不会有任何报错后，</br>在使用转换后的pptx重新发起转码                                                     |
+| -10    | pptx 格式解析错误                       | 请检查 PPT 格式是否正确                                                                                                                                                |
+| -11    | ppt 下载失败，未知错误                  | 请检查 ppt 下载 URL 是否有效                                                                                                                                           |
+| -12    | h5 上传失败                             | 请联系客服人员或重试                                                                                                                                                   |
+| -13    | ppt 转换服务未加载                      | 请联系客服人员                                                                                                                                                         |
+| -14    | ppt 转码过程中，发生错误                | 请根据错误信息中的页数，检查该页中的元素或动画组合是否正确;</br>如果错误信息中，无具体页数“unknown page”，则代表无法获取某一页转换失败，该 ppt 不支持转换              |
+| -15    | ppt 转码文件生成失败                    | 请联系客服人员或重试                                                                                                                                                   |
+| -16    | ppt 转换模式异常                        | PPT 格式不支持或联系客服人员                                                                                                                                           |
+| -17    | ppt 超过最大的转换页数限制（目前为500） | 不支持转换超过500页的 PPT                                                                                                                                              |
+| -18    | ppt 转换失败，错误未知                  | ppt 格式不支持或联系客服人员                                                                                                                                           |
+| -19    | ppt 被加密                              | 不支持加密的 PPT                                                                                                                                                       |
+| -20    | ppt 未知属性错误                        | 请检查 PPT 格式是否正确                                                                                                                                                |
+| -21    | ppt 检测属性超时                        | 请检查 PPT 格式是否正确                                                                                                                                                |
+| -22    | ppt 转换异常                            | 请检查 PPT 格式是否正确或重试                                                                                                                                          |
+| -23    | ppt 下载链接含有非法字符                | 请检查 ppt 下载链接是否正确                                                                                                                                            |
+| -24    | ppt 下载链接打开失败                    | 请检查 ppt 下载地址是否有效                                                                                                                                            |
+| -25    | ppt 下载链接打开超时                    | 请检查 ppt下载链接是否有效或下载服务器网络状况                                                                                                                         |
+| -26    | ppt 下载数据失败                        | 请检查 ppt下载服务器网络状况                                                                                                                                           |
+| -27    | ppt 下载数据超时                        | 请检查 ppt下载服务器网络状况或是否 ppt 过大，导致下载超时                                                                                                              |
+| -28    | ppt 包含自动翻页                        | 请根据错误信息中的页数,检查 该页 和 该页之后的页 是否有自动翻页;</br>如果错误信息中，无具体页数"Page unkown"，则代表无法获取某一页含有自动翻页，请手动确认或联系管理员 |
+| -101   | task info 文件读取失败                  | 请联系维护人员                                                                                                                                                         |
+| -102   | task info 格式不正确                    | 请联系维护人员                                                                                                                                                         |
+| -103   | task info 的 error_code 不等于0         | 请联系维护人员                                                                                                                                                         |
+| -104   | task 的 url 为空                        | 请联系维护人员                                                                                                                                                         |
+| -105   | task 的 下载url错误                     | 请检查转码文件下载链接                                                                                                                                                 |
+| -106   | 不支持的文件名后缀                      | 请检查文件名后缀名                                                                                                                                                     |
+| -107   | 文件下载失败，未知错误                  | 请检查下载链接地址是否有效                                                                                                                                             |
+| -108   | 下载链接非法                            | 请检查转码文件下载链接                                                                                                                                                 |
+| -109   | 下载链接打开失败                        | 请检查下载链接地址是否有效                                                                                                                                             |
+| -110   | 下载链接打开超时                        | 请检查下载链接地址是否有效                                                                                                                                             |
+| -111   | 下载失败                                | 请检查下载链接地址是否有效                                                                                                                                             |
+| -112   | 下载超时                                | 请检查下载链接带宽                                                                                                                                                     |
+| -113   | 本地临时文件夹创建失败                  | 请联系维护人员                                                                                                                                                         |
+| -114   | 文件上传转码后台失败                    | 请联系维护人员                                                                                                                                                         |
+| -115   | cos 请求转码失败                        | 文件格式不支持                                                                                                                                                         |
+| -116   | cos 请求转码失败                        | 文件格式不支持                                                                                                                                                         |
+| -117   | cos 转码失败超时                        | 文件格式不支持                                                                                                                                                         |
+| -118   | cos 转码过程中失败                      | 文件格式不支持                                                                                                                                                         |
+| -119   | 上传转码后的文件，到 cdn cos 失败       | 请联系维护人员或重试                                                                                                                                                   |
+| -120   | cos 转码，未知错误                      | 文件格式不支持                                                                                                                                                         |
+| -121   | 超过最大页数                            | 不支持超过500页的文件转码                                                                                                                                              |
+| -122   | cos 转码打开本地文件失败                | 请联系维护人员 或 重试                                                                                                                                                 |
+| -123   | cos 转码写本地文件失败                  | 请联系维护人员 或 重试                                                                                                                                                 |
+| -124   | cos 转码文件内容为空                    | 请联系维护人员 或 重试                                                                                                                                                 |
+| -125   | cos 转码获取分辨率失败                  | 请联系维护人员 或 重试                                                                                                                                                 |
+| -126   | pdf打开失败                             | pdf文件格式错误或pdf加密，不支持转码                                                                                                                                   |
+| -127   | pdf 文件加密                            | 不支持加密pdf文件转码                                                                                                                                                  |
+| -128   | 获取pdf页数失败                         | pdf文件格式不支持                                                                                                                                                      |
+| -129   | pdf 转码未知错误                        | pdf文件格式不支持                                                                                                                                                      |
+| -3001  | 转换失败或者任务创建失败.               | 文件格式不支持                                                                                                                                                         |
+| -3002  | 服务器过载，转换队列过长                | 请稍后重试转码                                                                                                                                                         |
+| -3003  | 转换超时                                | 文件格式不支持                                                                                                                                                         |
+| -3004  | 文件不存在                              | 请联系维护人员                                                                                                                                                         |
+| -3005  | 参数错误                                | 请联系维护人员                                                                                                                                                         |
+| -3006  | 文档加密                                | 不支持加密的文件转换                                                                                                                                                   |
+| -3007  | 强制结束，超时强制结束生成了部分数据    | 文件格式不支持                                                                                                                                                         |
+| -3008  | 文件长度为0                             | 文件格式不支持                                                                                                                                                         |
+| -3009  | 加载配置文件失败                        | 请联系维护人员                                                                                                                                                         |
+| -3010  | 请求信息组包失败                        | 请联系维护人员                                                                                                                                                         |
+| -3011  | 文档类型不支持                          | 文件格式不支持                                                                                                                                                         |
+| -3012  | pdf 文件转换失败                        | 文件格式不支持                                                                                                                                                         |
+| -3013  | 处理失败或者请求页超过                  | 文件格式不支持                                                                                                                                                         |
+| -3014  | 转换成功读取失败                        | 请联系维护人员                                                                                                                                                         |
+| -3015  | 转换成功，但请求页超过了总页数          | 无                                                                                                                                                                     |
+| -3016  | 压缩文档转换失败                        | 无                                                                                                                                                                     |
+| -3017  | 文档传输中                              | 请稍后重试转码                                                                                                                                                         |
+| -3018  | 下载文件分片失败                        | 请稍后重试转码                                                                                                                                                         |
+| -3019  | 文件落地失败                            | 请稍后重试转码                                                                                                                                                         |
+| -3020  | 没找到相应的预览任务                    | 请稍后重试转码                                                                                                                                                         |
 
 #### 请求错误码
 
-| 错误码 | 错误描述           | 解决方法                                                      |
-|:------|:------------------|:------------------------------------------------------------|
-| 20000 | 客户未开通服务      | 请参考`服务开通`中流程发送邮件申请开通文档转码服务               |
-| 20001 | 签名已过期          | 检查请求 URL 中的 expire_time 签名时间，更新过期时间后重新生成签名字符串 |
-| 20002 | 签名校验失败        | 检查 TicKey 与签名算法是否正确                                    |
-| 20003 | 参数解析失败        | 根据 error_msg 查询具体的请求参数异常信息，更正参数缺失/类型错误等     |
-| 20004 | 设置回调地址格式错误 | 检查回调地址是否正确                                            |
-| 20005 | 数据读取失败        | 请检查请求中的 TaskId 或联系客服人员                               |
-| 20099 | 转码服务内部错误     | 请联系客服人员                                                 |
+| 错误码      | 错误描述             | 解决方法                                                                 |
+| :---------- | :------------------- | :----------------------------------------------------------------------- |
+| 20000       | 客户未开通服务       | 请参考`服务开通`中流程发送邮件申请开通文档转码服务                       |
+| 20001       | 签名已过期           | 检查请求 URL 中的 expire_time 签名时间，更新过期时间后重新生成签名字符串 |
+| 20002       | 签名校验失败         | 检查 TicKey 与签名算法是否正确                                           |
+| 20003       | 参数解析失败         | 根据 error_msg 查询具体的请求参数异常信息，更正参数缺失/类型错误等       |
+| 20004       | 设置回调地址格式错误 | 检查回调地址是否正确                                                     |
+| 20005       | 数据读取失败         | 请检查请求中的 TaskId 或联系客服人员                                     |
+| 20090-20099 | 内部错误             | 请联系客服人员                                                           |
 
 ## ppt 演示文稿课件格式建议
 
