--- a/PaaS/Docs/SDK文档/互动白板接口文档.md
+++ b/PaaS/Docs/SDK文档/互动白板接口文档.md
@@ -145,6 +145,7 @@ void onTEBSyncData(String data);
 |  参数值  | 类型       | 说明 |
 | -- | --------- | ------------------ |
 |   data| String | 白板同步数据（JSON 格式字符串） |
+>?
 1. 收到该回调时需要将回调数据通过信令通道发送给房间内其他人，接受者收到后调用 AddSyncData 接口将数据添加到白板以实现数据同步。
 2. 该回调用于多个白板间的数据同步，使用内置 IM 作为信令通道时，不会收到该回调。
 
@@ -183,7 +184,7 @@ void onTEBSetBackgroundImage(String url);
 |  参数值  | 类型       | 说明 |
 | -- | --------- | ------------------ |
 |   url| String  | 调用 SetBackgroundImage 时传入的 URL |
-只有本地调用 SetBackgroundImage 时会收到该回调, 收到该回调表示背景图片已经上传或下载成功，并且显示出来。
+>?只有本地调用 SetBackgroundImage 时会收到该回调, 收到该回调表示背景图片已经上传或下载成功，并且显示出来。
 
 **设置白板背景 H5 状态改变回调函数**
 ```
@@ -194,7 +195,6 @@ void onTEBBackgroundH5StatusChanged(String boardId, String url, int status);
 |   boardId| String  | 白板 ID |
 |   url| String  | 调用 SetBackgroundImage 时传入的 URL |
 |   status| int| 新的白板图片状态 |
-
 
 ### 白板页操作回调
 
