--- a/PaaS/Docs/课后录制.md
+++ b/PaaS/Docs/课后录制.md
@@ -10,7 +10,7 @@
 
 若您没有开通课后录制服务，请按照 [购买指南](../../购买指南.md) 购买相应的服务后发送邮件申请开通，并按照文档流程开启实时音视频云端录制以及提供 App 管理员的`UserId`和`UserSig`。
 
-> 注意：实时音视频云端录制和白板课后录制是两个独立的录制模块，白板课后录制结束后将透传实时音视频云端录制文件的下载地址。
+>!实时音视频云端录制和白板课后录制是两个独立的录制模块，白板课后录制结束后将透传实时音视频云端录制文件的下载地址。
 
 
 ### 发起课后录制
@@ -27,27 +27,27 @@
 
 当您主动查询录制进度时收到 `progress` 参数值为100或者您设置了回调地址，收到录制完成回调时，您可以拿到录制结果（一个 JSON 串），其格式如下：
 
-| 参数名            | 类型        | 描述                                                                     |
-| :---------------- | :---------- | :----------------------------------------------------------------------- |
-| sdkappid          | int         | sdkappid                                                                 |
-| room_id           | int         | 房间号                                                                   |
-| group_id          | string      | 白板的群组 ID                                                            |
+| 参数名             | 类型         | 描述                                                     |
+|:------------------|:------------|:-----------------------------------------------------------|
+| sdkappid          | int         | SDKAppID                                                   |
+| room_id           | int         | 房间号                                                     |
+| group_id          | string      | 白板的群组 ID                                               |
 | record_start_time | int         | 录制视频开始时 IM 服务器的 Unix 时间戳，可用于视频与 IM 消息对齐，单位秒 |
-| total_time        | int         | 回放视频总时长（单位：毫秒）                                             |
-| video_info        | VideoInfo[] | 录制视频列表                                                             |
+| total_time        | int         | 回放视频总时长（单位：毫秒）                                  |
+| video_info        | VideoInfo[] | 录制视频列表                                               |
 
 VideoInfo 对象格式
 
-| 参数名          | 类型   | 描述                                                                |
-| :-------------- | :----- | :------------------------------------------------------------------ |
-| video_play_time | int    | 视频开始播放的时间（单位：毫秒）                                    |
-| video_size      | int    | 视频大小（字节）                                                    |
-| video_format    | string | 视频格式                                                            |
-| video_duration  | int    | 视频播放时长（单位：毫秒）                                          |
-| video_url       | string | 视频文件 url                                                        |
-| video_id        | string | 点播后台返回的视频 fileId                                           |
-| video_type      | int    | 视频流类型 0：摄像头视频 1：屏幕分享视频 2：白板视频 3：混流视频    |
-| user_id         | string | 摄像头/屏幕分享视频所属用户的 ID（白板视频与混流视频 user_id 为空） |
+| 参数名           | 类型    | 描述                                                       |
+|:----------------|:-------|:----------------------------------------------------------|
+| video_play_time | int    | 视频开始播放的时间（单位：毫秒）                               |
+| video_size      | int    | 视频大小（字节）                                              |
+| video_format    | string | 视频格式                                                   |
+| video_duration  | int    | 视频播放时长（单位：毫秒）                                     |
+| video_url       | string | 视频文件 url                                                |
+| video_id        | string | 点播后台返回的视频 fileId                                     |
+| video_type      | int    | 视频流类型 0：摄像头视频 1：屏幕分享视频 2：白板视频 3：混流视频      |
+| user_id         | string | 摄像头/屏幕分享视频所属用户的 ID（白板视频与混流视频 user_id 为空）    |
 
 #### 未混流录制结果
 
@@ -130,10 +130,10 @@ VideoInfo 对象格式
 sign = md5(TicKey+expire_time)
 ```
 
-| 参数名      | 描述                                   |
-| :---------- | :------------------------------------- |
-| tic_key     | [功能开通](#jump5) 中获取的密钥 TicKey |
-| expire_time | Unix 时间戳，单位秒，签名过期时间      |
+| 参数名       | 描述                         |
+|:------------|:----------------------------|
+| tic_key     | [功能开通](#jump5) 中获取的密钥 TicKey        |
+| expire_time | Unix 时间戳，单位秒，签名过期时间 |
 
 签名举例：
 1. 当前时间戳是 `1548247717`；
@@ -169,38 +169,37 @@ func GetMD5Hash(data []byte) string {
 
 发起一个课后录制任务
 
-| 请求基本信息 | 描述                                                   |
-| :----------- | :----------------------------------------------------- |
-| 方法         | POST                                                   |
-| 请求 URL     | https://iclass.api.qcloud.com/record/v1/offline/create |
-| 请求 Header  | Content-Type:application/json                          |
+| 请求基本信息 | 描述                                                    |
+|:----------|:-------------------------------------------------------|
+| 方法       | POST                                                   |
+| 请求 URL    | `https://iclass.api.qcloud.com/record/v1/offline/create` |
+| 请求 Header | Content-Type:application/json                          |
 
 #### 请求参数
 
 URL 参数
 
-| 参数名      | 描述                                                                       |
-| :---------- | :------------------------------------------------------------------------- |
-| sdkappid    | 客户的 sdkappid                                                            |
-| sign        | 用于鉴权的签名                                                             |
-| expire_time | 用于鉴权的签名过期时间，Unix 时间戳，单位秒                                |
-| random      | 随机 int32 正整数，每次请求都需要带上，定位问题时需要提供该次请求的 random |
+| 参数名    | 描述                                                        |
+|:---------|:-----------------------------------------------------------|
+| sdkappid | 客户的 SDKAppID                                              |
+| sign     | 用于鉴权的签名                                                |
+| expire_time | 用于鉴权的签名过期时间，Unix 时间戳，单位秒       |
+| random   | 随机 int32 正整数，每次请求都需要带上，定位问题时需要提供该次请求的 random |
 
 Body 参数（JSON 格式）
 
-| 参数名     | 类型            | 描述                                             | 是否必填 | 默认值               |
-| :--------- | :-------------- | :----------------------------------------------- | :------- | :------------------- |
-| room_id    | int             | 需要录制的房间 ID                                | 是       | -                    |
-| group_id   | string          | 白板的 IM 群组 ID，如果不填默认为与房间号相同    | 否       | room_id 的字符串     |
-| mix_stream | MixStream 对象  | 是否开启混流录制等                               | 否       | 默认 MixStream 对象  |
-| whiteboard | Whiteboard 对象 | 实时录制白板参数，例如白板初始化参数，白板宽高等 | 否       | 默认 Whiteboard 对象 |
+| 参数名       | 类型           | 描述                                 | 是否必填 | 默认值 |
+|:------------|:--------------|:--------------------------------------|:--------|:---------------|
+| room_id     | int           | 需要录制的房间 ID                  | 是      | -                 |
+| group_id    | string        | 白板的 IM 群组 ID，如果不填默认为与房间号相同     | 否      | room_id 的字符串    |
+| mix_stream  | MixStream 对象          | 是否开启混流录制等                   | 否      | 默认 MixStream 对象  |
+| whiteboard  | Whiteboard 对象 | 实时录制白板参数，例如白板初始化参数、白板宽高等 | 否  | 默认 Whiteboard 对象 |
 
 MixStream 参数
 
-| 参数名  | 类型 | 描述                       | 是否必填 |
-| :------ | :--- | :------------------------- | :------- |
-| enabled | bool | 是否混流录制，默认为 false | 否       |
-
+| 参数名      | 类型    | 描述               | 是否必填 |
+|:-----------|:-------|:-----------------------------------------------------------------------|:-------|
+| enabled      | bool    | 是否混流录制，默认为 false | 否      |
 
 Whiteboard 参数
 
@@ -241,10 +240,10 @@ Whiteboard 参数
 
 返回参数（JSON 格式）
 
-| 参数名     | 类型   | 描述                                         |
-| :--------- | :----- | :------------------------------------------- |
-| error_code | int    | 错误码                                       |
-| error_msg  | string | 错误信息                                     |
+| 参数名      | 类型    | 描述                                  |
+|:-----------|:-------|:-------------------------------------|
+| error_code | int    | 错误码                                |
+| error_msg  | string | 错误信息                              |
 | task_id    | string | 课后录制任务 ID，查询录制进度会依赖此任务 ID |
 
 返回示例：
@@ -262,27 +261,27 @@ Whiteboard 参数
 查询课后录制参数
 
 | 请求基本信息 | 描述                                                  |
-| :----------- | :---------------------------------------------------- |
+|:-------------|:------------------------------------------------------|
 | 方法         | POST                                                  |
-| 请求 URL     | https://iclass.api.qcloud.com/record/v1/offline/query |
-| 请求 Header  | Content-Type:application/json                         |
+| 请求 URL      | `https://iclass.api.qcloud.com/record/v1/offline/query` |
+| 请求 Header   | Content-Type:application/json                         |
 
 #### 请求参数
 
 URL 参数
 
-| 参数名      | 描述                                                                       |
-| :---------- | :------------------------------------------------------------------------- |
-| sdkappid    | 客户的 sdkappid                                                            |
-| sign        | 用于鉴权的签名                                                             |
-| expire_time | 用于鉴权的签名过期时间，Unix 时间戳，单位秒                                |
-| random      | 随机 int32 正整数，每次请求都需要带上，定位问题时需要提供该次请求的 random |
+| 参数名   | 描述                                                                    |
+|:---------|:------------------------------------------------------------------------|
+| sdkappid | 客户的 SDKAppID                                                          |
+| sign     | 用于鉴权的签名                                                          |
+| expire_time | 用于鉴权的签名过期时间，Unix 时间戳，单位秒       |
+| random   | 随机 int32 正整数，每次请求都需要带上，定位问题时需要提供该次请求的 random |
 
 Body 参数（JSON 格式）
 
-| 参数名  | 类型   | 描述                      | 是否必填 |
-| :------ | :----- | :------------------------ | :------- |
-| task_id | string | 需要查询结果的录制任务 ID | 是       |
+| 参数名       | 类型    | 描述                 | 是否必填 |
+|:------------|:-------|:--------------------|:-------|
+| task_id     | string | 需要查询结果的录制任务 ID | 是     |
 
 请求示例：
 请将参数替换为实际值。
@@ -300,41 +299,41 @@ Body 参数（JSON 格式）
 
 返回参数（JSON 格式）
 
-| 参数名            | 类型        | 描述                                                                     |
-| :---------------- | :---------- | :----------------------------------------------------------------------- |
-| error_code        | int         | 错误码                                                                   |
-| error_msg         | string      | 错误信息                                                                 |
-| task_id           | string      | 需要查询结果的录制任务 ID                                                |
-| status            | string      | 课后录制任务状态                                                         |
-| progress          | int         | 课后录制进度（0-100，100表示录制完成 ）                                  |
-| room_id           | int         | 房间号                                                                   |
-| group_id          | string      | 白板的群组 ID                                                            |
+| 参数名             | 类型         | 描述                                                        |
+|:------------------|:------------|:-----------------------------------------------------------|
+| error_code        | int         | 错误码                                                      |
+| error_msg         | string      | 错误信息                                                    |
+| task_id           | string      | 需要查询结果的录制任务 ID                                       |
+| status            | string      | 课后录制任务状态                                              |
+| progress          | int         | 课后录制进度（0-100，100表示录制完成 ）                        |
+| room_id           | int         | 房间号                                                      |
+| group_id          | string      | 白板的群组 ID                                                 |
 | record_start_time | int         | 录制视频开始时 IM 服务器的 Unix 时间戳，可用于视频与 IM 消息对齐，单位秒 |
-| total_time        | int         | 回放视频总时长（单位：毫秒）                                             |
-| video_info        | VideoInfo[] | 录制视频列表                                                             |
+| total_time        | int         | 回放视频总时长（单位：毫秒）                                     |
+| video_info        | VideoInfo[] | 录制视频列表                                                 |
 
 VideoInfo 对象格式
 
-| 参数名          | 类型   | 描述                                                                |
-| :-------------- | :----- | :------------------------------------------------------------------ |
-| video_play_time | int    | 视频开始播放的时间（单位：毫秒）                                    |
-| video_size      | int    | 视频大小（字节）                                                    |
-| video_format    | string | 视频格式                                                            |
-| video_duration  | int    | 视频播放时长（单位：毫秒）                                          |
-| video_url       | string | 视频文件 url                                                        |
-| video_id        | string | 点播后台返回的视频 fileId                                           |
-| video_type      | int    | 视频流类型 0：摄像头视频 1：屏幕分享视频 2：白板视频 3：混流视频    |
-| user_id         | string | 摄像头/屏幕分享视频所属用户的 ID（白板视频与混流视频 user_id 为空） |
+| 参数名           | 类型    | 描述                                                       |
+|:----------------|:-------|:----------------------------------------------------------|
+| video_play_time | int    | 视频开始播放的时间（单位：毫秒）                               |
+| video_size      | int    | 视频大小（字节）                                              |
+| video_format    | string | 视频格式                                                   |
+| video_duration  | int    | 视频播放时长（单位：毫秒）                                    |
+| video_url       | string | 视频文件 url                                                |
+| video_id        | string | 点播后台返回的视频 fileId                                     |
+| video_type      | int    | 视频流类型，0：摄像头视频，1：屏幕分享视频，2：白板视频，3：混流视频      |
+| user_id         | string | 摄像头/屏幕分享视频所属用户的 ID（白板视频与混流视频 user_id 为空）    |
 
 >!如果录制失败，返回字段`video_size`，`video_duration`，`video_url`的值为空（类型默认值），录制失败的课堂，7天内可以再次发起录制。
 
 课后录制任务可能的状态有以下几种。
 
-| status     | 描述                                                               |
-| :--------- | :----------------------------------------------------------------- |
-| queued     | 正在排队                                                           |
-| processing | 正在录制                                                           |
-| finished   | 录制结束（成功完成或失败结束，可以通过错误码和错误信息进一步判断） |
+| status     | 描述                                                      |
+|:-----------|:---------------------------------------------------------|
+| queued     | 正在排队                                                  |
+| processing | 正在录制                                                  |
+| finished   | 录制结束（成功完成或失败结束，可以通过错误码和错误信息进一步判断）  |
 
 >? 课后录制需要耗时较长，因此录制可能需要短时间排队执行。
 
@@ -391,27 +390,27 @@ VideoInfo 对象格式
 #### 接口说明
 
 | 请求基本信息 | 描述                                                     |
-| :----------- | :------------------------------------------------------- |
+|:-------------|:---------------------------------------------------------|
 | 方法         | POST                                                     |
-| 请求 URL     | https://iclass.api.qcloud.com/record/v1/offline/callback |
-| 请求 Header  | Content-Type:application/json                            |
+| 请求 URL      | `https://iclass.api.qcloud.com/record/v1/offline/callback` |
+| 请求 Header   | Content-Type:application/json                            |
 
 #### 请求参数
 
 URL 参数
 
-| 参数名      | 描述                                                                       |
-| :---------- | :------------------------------------------------------------------------- |
-| sdkappid    | 客户的 sdkappid                                                            |
-| sign        | 用于鉴权的签名                                                             |
-| expire_time | 用于鉴权的签名过期时间，Unix 时间戳，单位秒                                |
-| random      | 随机 int32 正整数，每次请求都需要带上，定位问题时需要提供该次请求的 random |
+| 参数名    | 描述                                                           |
+|:---------|:--------------------------------------------------------------|
+| sdkappid | 客户的 SDKAppID                                                 |
+| sign     | 用于鉴权的签名                                                  |
+| expire_time | 用于鉴权的签名过期时间，Unix 时间戳，单位秒       |
+| random   | 随机 int32 正整数，每次请求都需要带上，定位问题时需要提供该次请求的 random |
 
 Body 参数（JSON 格式）
 
-| 参数名   | 类型   | 描述                                                                                                                                 |
-| :------- | :----- | :----------------------------------------------------------------------------------------------------------------------------------- |
-| callback | string | 录制完成后回调地址，如果传空字符串会删除原来的回调地址配置，回调地址仅支持 http 或 https 协议，即回调地址以`http://`或`https://`开头 |
+| 参数名       | 类型    | 描述                                                                                                             |
+|:------------|:-------|:----------------------------------------------------------------------------------------------------------------|
+| callback    | string | 录制完成后回调地址，如果传空字符串会删除原来的回调地址配置，回调地址仅支持 HTTP 或 HTTPS 协议，即回调地址以`http://`或`https://`开头 |
 
 请求示例：
 请将参数替换为实际值。
@@ -430,7 +429,7 @@ Body 参数（JSON 格式）
 返回参数（JSON 格式）
 
 | 参数名     | 类型   | 描述     |
-| :--------- | :----- | :------- |
+|:-----------|:-------|:---------|
 | error_code | int    | 错误码   |
 | error_msg  | string | 错误信息 |
 
@@ -453,48 +452,48 @@ Body 参数（JSON 格式）
 - 业务服务器必须回包`{"error_code":0}`，否则，课后录制服务认为回调发送失败后进行重试，每分钟重试1次，最多重试10次。
 
 | 请求基本信息 | 描述                          |
-| :----------- | :---------------------------- |
+|:-------------|:------------------------------|
 | 方法         | POST                          |
-| 请求 Header  | Content-Type:application/json |
+| 请求 Header   | Content-Type:application/json |
 
 #### 回调请求参数
 
 URL 参数
 
-| 参数名      | 描述                                                                       |
-| :---------- | :------------------------------------------------------------------------- |
-| sign        | 用于鉴权的签名，需对该签名做校验，判断是否为有效请求                       |
-| expire_time | 用于鉴权的签名过期时间，Unix 时间戳，单位秒                                |
-| random      | 随机 int32 正整数，每次请求都需要带上，定位问题时需要提供该次请求的 random |
-| sdkappid    | 客户的 sdkappid                                                            |
+| 参数名 | 描述                                                                    |
+|:-------|:------------------------------------------------------------------------|
+| sign   | 用于鉴权的签名，需对该签名做校验，判断是否为有效请求                    |
+| expire_time | 用于鉴权的签名过期时间，Unix 时间戳，单位秒       |
+| random | 随机 int32 正整数，每次请求都需要带上，定位问题时需要提供该次请求的 random |
+| sdkappid | 客户的 SDKAppID                                                 |
 
 Body 参数（JSON 格式）
 
-| 参数名            | 类型        | 描述                                                                     |
-| :---------------- | :---------- | :----------------------------------------------------------------------- |
-| error_code        | int         | 错误码                                                                   |
-| error_msg         | string      | 错误信息                                                                 |
-| timestamp         | int         | 回调发送的 Unix 时间戳，单位秒                                           |
-| task_id           | string      | 需要查询结果的录制任务 ID                                                |
-| task_type         | string      | 实时录制任务类型固定为`"record_offline"`                                 |
-| room_id           | int         | 房间号                                                                   |
-| group_id          | string      | 白板的群组 ID                                                            |
+| 参数名             | 类型         | 描述                                                        |
+|:------------------|:------------|:-----------------------------------------------------------|
+| error_code        | int         | 错误码                                                      |
+| error_msg         | string      | 错误信息                                                    |
+| timestamp         | int         | 回调发送的 Unix 时间戳，单位秒                                   |
+| task_id           | string      | 需要查询结果的录制任务 ID                                       |
+| task_type         | string      | 实时录制任务类型固定为`"record_offline"`                        |
+| room_id           | int         | 房间号                                                      |
+| group_id          | string      | 白板的群组 ID                                                 |
 | record_start_time | int         | 录制视频开始时 IM 服务器的 Unix 时间戳，可用于视频与 IM 消息对齐，单位秒 |
-| total_time        | int         | 回放视频总时长（单位：毫秒）                                             |
-| video_info        | VideoInfo[] | 录制视频列表                                                             |
+| total_time        | int         | 回放视频总时长（单位：毫秒）                                  |
+| video_info        | VideoInfo[] | 录制视频列表                                                 |
 
 VideoInfo对象格式
 
-| 参数名          | 类型   | 描述                                                                |
-| :-------------- | :----- | :------------------------------------------------------------------ |
-| video_play_time | int    | 视频开始播放的时间（单位：毫秒）                                    |
-| video_size      | int    | 视频大小（字节）                                                    |
-| video_format    | string | 视频格式                                                            |
-| video_duration  | int    | 视频播放时长（单位：毫秒）                                          |
-| video_url       | string | 视频文件 url                                                        |
-| video_id        | string | 点播后台返回的视频 fileId                                           |
-| video_type      | int    | 视频流类型 0：摄像头视频 1：屏幕分享视频 2：白板视频 3：混流视频    |
-| user_id         | string | 摄像头/屏幕分享视频所属用户的 ID（白板视频与混流视频 user_id 为空） |
+| 参数名           | 类型    | 描述                                                       |
+|:----------------|:-------|:----------------------------------------------------------|
+| video_play_time | int    | 视频开始播放的时间（单位：毫秒）                             |
+| video_size      | int    | 视频大小（字节）                                           |
+| video_format    | string | 视频格式                                                   |
+| video_duration  | int    | 视频播放时长（单位：毫秒）                                  |
+| video_url       | string | 视频文件 url                                                |
+| video_id        | string | 点播后台返回的视频 fileId                                     |
+| video_type      | int    | 视频流类型，0：摄像头视频，1：屏幕分享视频，2：白板视频，3：混流视频      |
+| user_id         | string | 摄像头/屏幕分享视频所属用户的 ID（白板视频与混流视频 user_id 为空）    |
 
 回调示例：
 
@@ -558,31 +557,29 @@ VideoInfo对象格式
 
 #### 课后录制错误码
 
-| 错误码 | 错误描述             | 解决方法                                                             |
-| :----- | :------------------- | :------------------------------------------------------------------- |
-| -1     | 内部错误             | 联系腾讯技术支持具体分析                                             |
-| 2003   | 下载 IM 消息失败     | 检查房间是否已经被销毁，被销毁的房间无法进行课后录制                 |
-| 2004   | 获取 IM 对时信息失败 | 群组中没有找到对时信息，请使用新的群组或联系技术支持                 |
-| 2005   | 上传视频文件失败     | 先对课堂发起重新录制，如果问题依旧存在，联系腾讯技术支持             |
-| 2007   | 课堂总时长超过限制   | 录制服务计算出的课堂时长超过限制（最大24小时），可能对时信息错误导致 |
+| 错误码 | 错误描述         | 解决方法                                               |
+|:------|:---------------|:-----------------------------------------------------|
+| -1    | 内部错误         | 联系腾讯技术支持具体分析                                  |
+| 2003  | 下载 IM 消息失败    | 检查房间是否已经被销毁，被销毁的房间无法进行课后录制            |
+| 2004  | 获取 IM 对时信息失败 | 群组中没有找到对时信息，请使用新的群组或联系技术支持            |
+| 2005  | 上传视频文件失败   | 先对课堂发起重新录制，如果问题依旧存在，联系腾讯技术支持         |
+| 2007  | 课堂总时长超过限制 | 录制服务计算出的课堂时长超过限制（最大24小时），可能对时信息错误导致 |
 
 #### 请求错误码
 
-| 错误码      | 错误描述                               | 解决方法                                                                 |
-| :---------- | :------------------------------------- | :----------------------------------------------------------------------- |
-| 20000       | 客户未开通服务                         | 请参考 [功能开通](#jump5) 中流程发送邮件申请开通课后录制                 |
-| 20001       | 签名已过期                             | 检查请求 URL 中的 expire_time 签名时间，更新过期时间后重新生成签名字符串 |
-| 20002       | 签名校验失败                           | 检查 TicKey 与签名算法是否正确                                           |
-| 20003       | 参数解析失败                           | 根据 error_msg 查询具体的请求参数异常信息，更正参数缺失/类型错误等       |
-| 20004       | 设置回调地址格式错误                   | 检查回调地址是否正确                                                     |
-| 20005       | 数据读取失败                           | 请检查请求中的 TaskId 或联系客服人员                                     |
-| 20010       | 同一个房间的录制任务已经添加并且未结束 | 确认查询之前上一个课后录制任务的录制结果，或等待上个任务结束后再重新发起 |
-| 20090-20099 | 内部错误                               | 请联系客服人员                                                           |
+| 错误码 | 错误描述                          | 解决方法                                                       |
+|:------|:---------------------------------|:-------------------------------------------------------------|
+| 20000 | 客户未开通服务                     | 请参考 [功能开通](#jump5) 中流程发送邮件申请开通课后录制                   |
+| 20001 | 签名已过期                         | 检查请求 URL 中的 expire_time 签名时间，更新过期时间后重新生成签名字符串  |
+| 20002 | 签名校验失败                       | 检查 TicKey 与签名算法是否正确                                     |
+| 20003 | 参数解析失败           | 根据 error_msg 查询具体的请求参数异常信息，更正参数缺失/类型错误等      |
+| 20004 | 设置回调地址格式错误                | 检查回调地址是否正确                                             |
+| 20005 | 数据读取失败                       | 请检查请求中的 TaskId 或联系客服人员                                |
+| 20010 | 同一个房间的录制任务已经添加并且未结束 | 确认查询之前上一个课后录制任务的录制结果，或等待上个任务结束后再重新发起 |
+| 20090-20099 | 内部错误                          | 请联系客服人员                                                  |
 
 ## 使用限制
-
-课后录制原理是，将上课过程中的白板消息进行重新播放一遍，并录制成白板视频,然后和点播录制的摄像头视频、屏幕分享视频一起下发给客户后台；当然，如果发起录制时，设置了混流，下发结果前，会将各个视频文件混流成一个文件；所以，使用上会有一些限制，如下，
-
-- 由于课后录制是对课堂的白板消息进行重新播放一遍，录制耗时会比较长，所以，现在推荐使用实时录制；如果线上课堂，实时录制出现异常，且不可恢复，可以使用课后录制作为补救方式；
-- 由于课后录制是对课堂的白板消息进行重新播放一遍，并录制成视频文件，所以，必须在下课后才能发起录制，是从第一次白板操作开始录制，到最后一次白板操作结束；如果在课中发起录制，可能导致录制的白板不全，或者没有摄像头视频\屏幕分享视频文件;
-- 白板消息在录制后台只保留7天，所以，只能在课堂结束后的7天内发起录制；
+课后录制原理是将上课过程中的白板消息重新播放一遍，并录制成白板视频，然后和点播录制的摄像头视频、屏幕分享视频一起下发给客户后台。如果发起录制时设置了混流，下发结果前，会将各个视频文件混流成一个文件。此时会产生的使用限制如下：
+- 由于课后录制是对课堂的白板消息进行重新播放一遍，录制耗时会比较长，所以推荐使用实时录制。如果线上课堂实时录制出现异常，且不可恢复，可使用课后录制作为补救方式。
+- 由于课后录制是对课堂的白板消息进行重新播放一遍，并录制成视频文件，所以必须在下课后才能发起录制。录制是从第一次白板操作开始，到最后一次白板操作结束。如果在课中发起录制，可能导致录制的白板不全，或者没有摄像头视频/屏幕分享视频文件。
+- 白板消息在录制后台只保留7天，所以只能在课堂结束后的7天内发起录制。
