[实时录制]增加纯音频支持说明

--- a/PaaS/Docs/实时录制.md
+++ b/PaaS/Docs/实时录制.md
@@ -61,7 +61,7 @@ VideoInfo 对象格式
 | video_duration  | int    | 视频播放时长（单位：毫秒）                                  |
 | video_url       | string | 视频文件 url                                                |
 | video_id        | string | 点播后台返回的视频 fileId                                     |
-| video_type      | int    | 视频流类型，0：摄像头视频，2：白板视频，3：混流视频      |
+| video_type      | int    | 视频流类型，0：摄像头视频，2：白板视频，3：混流视频，4：纯音频文件     |
 | user_id         | string | 摄像头视频所属用户的 ID <br> 特别说明：<br> 1. 白板视频的 user_id 为空 <br> 2. 混流视频的 user_id 命名格式为 tic_mixstream_{room_id}_{model_id}，其中 room_id 为录制房间号，model_id 为混流布局模板号，如果是自定义布局，则 model_id 固定为"custom" |
 
 以下为一个录制结果 JSON 串示例：
@@ -214,6 +214,7 @@ Body 参数（JSON 格式）
 | whiteboard  | Whiteboard  | 实时录制白板参数，例如白板宽高等                     | 否      |
 | mix_stream | MixStream | 实时录制混流参数 <br> 特别说明：<br> 1. 混流功能需要根据 [购买指南](../../购买指南.md) 发送邮件申请开通， 开通服务类型填 **实时录制混流服务** <br> 2. 使用混流功能，必须提供 extra 参数，且 extra 参数中必须包含 "mix_stream" | 否 |
 | extra | string[] | 使用到的高级功能列表 <br> 可以选值列表： <br> mix_stream - 混流功能 | 否 |
+| audio_file_needed | bool | 是否需要在结果回调中返回各路流的纯音频录制文件，文件格式为mp3 | 否 |
 
 Concat 参数 
 
@@ -651,7 +652,7 @@ VideoInfo 对象格式
 | video_duration  | int    | 视频播放时长（单位：毫秒）                                  |
 | video_url       | string | 视频文件 url                                                |
 | video_id        | string | 点播后台返回的视频 fileId                                     |
-| video_type      | int    | 视频流类型，0：摄像头视频，2：白板视频，3：混流视频      |
+| video_type      | int    | 视频流类型，0：摄像头视频，2：白板视频，3：混流视频，4：纯音频文件      |
 | user_id         | string | 摄像头视频所属用户的 ID（白板视频与混流视频 user_id 为空）    |
 
 OmittedDuration 对象格式
@@ -864,7 +865,7 @@ VideoInfo 对象格式
 | video_duration  | int    | 视频播放时长（单位：毫秒）                                 |
 | video_url       | string | 视频文件 url                                                |
 | video_id        | string | 点播后台返回的视频 fileId                                     |
-| video_type      | int    | 视频流类型，0：摄像头视频，2：白板视频，3：混流视频      |
+| video_type      | int    | 视频流类型，0：摄像头视频，2：白板视频，3：混流视频，4：纯音频文件     |
 | user_id         | string | 摄像头视频所属用户的 ID（白板视频与混流视频 user_id 为空）    |
 
 OmittedDuration 对象格式
