[实时录制]补全取值范围

--- a/PaaS/Docs/实时录制.md
+++ b/PaaS/Docs/实时录制.md
@@ -257,16 +257,16 @@ Canvas 参数
 
 | 参数名 | 类型 | 描述 | 是否必填 |
 | :--- | :--- | :--- | :--- |
-| layout_params.width | int | 混流画布宽 | 是 |
-| layout_params.height | int | 混流画布高 | 是 |
+| layout_params.width | int | 混流画布宽，取值范围[2,3000] | 是 |
+| layout_params.height | int | 混流画布高，取值范围[2,3000] | 是 |
 | background_color | string | 背景颜色，默认为黑色，格式为 RGB 格式，如红色为 #FF0000 | 否 |
 
 StreamLayout 参数 
 
 | 参数名 | 类型 | 描述 | 是否必填 |
 | :--- | :--- | :--- | :--- |
-| layout_params.width | int | 流画面宽，取值范围[1,3000] | 是 |
-| layout_params.height | int | 流画面高，取值范围[1,3000] | 是 |
+| layout_params.width | int | 流画面宽，取值范围[2,3000] | 是 |
+| layout_params.height | int | 流画面高，取值范围[2,3000] | 是 |
 | layout_params.x | int | 当前画面左上角顶点相对于 Canvas 左上角顶点的 x 轴偏移量，默认为0，取值范围[0,3000] | 否 |
 | layout_params.y | int | 当前画面左上角顶点相对于 Canvas 左上角顶点的 y 轴偏移量，默认为0，取值范围[0,3000] | 否 |
 | layout_params.z_order | int | 画面 z 轴位置，默认为0 </br> z 轴确定了重叠画面的遮盖顺序，z 轴值大的画面处于顶层 | 否 |
