修改下，去掉TicManager相关。

--- a/PaaS/Docs/SDK文档/Android/互动白板接入文档.md
+++ b/PaaS/Docs/SDK文档/Android/互动白板接入文档.md
@@ -38,13 +38,15 @@ mBoardCallback = new MyBoardCallback(this);
 TEduBoardController.TEduBoardInitParam initParam = new TEduBoardController.TEduBoardInitParam();  
 initParam.brushColor = new TEduBoardController.TEduBoardColor(0, 255, 0, 255);  
 initParam.smoothLevel = 0; // 用于指定笔迹平滑级别，默认值0.1，取值[0, 1]  
-  
-TICClassroomOption classroomOption = new TICClassroomOption();  
-classroomOption.classId = mRoomId;  
-classroomOption.boardCallback = mBoardCallback;  
-classroomOption.boardInitPara = initParam;
 
-mTicManager.joinClassroom(classroomOption, new TICManager.TICCallback());
+//3、构造白板
+mBoard = new TEduBoardController(mAppContext);
+mBoard.addCallback(mBoardCallback);
+
+//4、调用白板初始化函数
+TEduBoardController.TEduBoardAuthParam authParam = new TEduBoardController.TEduBoardAuthParam(sdkAppId, userInfo.getUserId(), userInfo.getUserSig());
+mBoard.init(authParam, classId, initParam);
+
 ```
 #### 获取白板视图
 在白板初始化成功后，`onTEBInit` 回调方法内获取白板 view 加入显示视图中：
