文档参数错误修改

--- a/PaaS/Docs/SDK文档/互动课堂接口文档.md
+++ b/PaaS/Docs/SDK文档/互动课堂接口文档.md
@@ -69,7 +69,7 @@ void onTICUserVideoAvailable(String userId, boolean available);
 |  参数值  | 类型       | 说明 |
 | -- | --------- | ------------------ |
 |   userId| String| 用户标识 |
-|   userId| String| 画面是否开启 |
+|   available| String| 画面是否开启 |
 >?当 available 为 YES 时，您可以在这个回调中调用 startRemoteView 显示此 userId 的视频画面。
 
 **对应的远端辅路（屏幕分享等）画面的状态通知**
