--- a/PaaS/Docs/实时录制.md
+++ b/PaaS/Docs/实时录制.md
@@ -242,7 +242,7 @@ MixStream 参数
 |:--- | :--- | :--- | :--- |
 | enabled | bool | 是否开启混流 | 是 |
 | disable_audio | bool | 是否禁用音频混流 | 否 |
-| model_id | int | 内置混流布局模板ID, 取值 [1, 2], 区别见内置混流布局模板样式示例说明  | 否, 但是在没有提供custom字段的时候，model_id属于必填参数 |
+| model_id | int | 内置混流布局模板 ID，取值 [1, 2]，区别见内置混流布局模板样式示例说明 <br> 未填写 custom 字段时，model_id 字段必填 | 否 |
 | teacher_id | string | 老师用户 ID <br> 此字段只在 model_id 已填写时生效 <br> 填写 teacher_id 是把指定为 teacher_id 的用户视频流显示在内置模板的第一个小画面中 | 否 |
 | custom | CustomLayout | 自定义混流布局参数 <br> 当此字段存在时，model_id 及 teacher_id 字段将被忽略 | 否 |
 
@@ -630,7 +630,7 @@ Body 参数（JSON 格式）
 |:---------------|:------------|:----------------------------------------------------------------------------------------------------------|
 | error_code     | int         | 错误码                                                                                                     |
 | error_msg      | string      | 错误信息                                                                                                   |
-| finish_reason | string | 录制结束原因，“auto”表示房间内长时间(5分钟）没有音视频上行及白板操作导致自动停止录制， “usercall”表示主动调用了停止录制接口 |
+| finish_reason | string | 录制结束原因，“auto”表示房间内长时间（5分钟）没有音视频上行及白板操作导致自动停止录制，“usercall”表示主动调用了停止录制接口 |
 | task_id        | string      | 需要查询结果的录制任务 ID                                                                                      |
 | status         | string      | 录制任务状态，“prepared”表示录制正在准备中（进房/启动录制服务等操作），“recording”表示录制已开始，“finished”表示录制完成 |
 | room_id        | int         | 房间号                                                                                                     |
@@ -969,4 +969,4 @@ OmittedDuration 对象格式
 | 20005 | 数据读取失败                   | 请检查请求中的 TaskId 或联系客服人员                              |
 | 20011 | 发送停止任务请求时录制任务已经结束 | 可能由于长时间房间内没有用户音视频上行，实时录制服务自动停止录制      |
 | 20013 | 实时录制用户已被占用            | 请重新生成一个不同的实时录制用户 UserId 与 UserSig                  |
-| 20090-20099 | 内部错误     | 请联系客服人员                                                 |
+|20090 - 20099| 内部错误     | 请联系客服人员                                                 |
