--- a/PaaS/Docs/SDK文档/Android/互动白板接入文档.md
+++ b/PaaS/Docs/SDK文档/Android/互动白板接入文档.md
@@ -38,15 +38,13 @@ mBoardCallback = new MyBoardCallback(this);
 TEduBoardController.TEduBoardInitParam initParam = new TEduBoardController.TEduBoardInitParam();  
 initParam.brushColor = new TEduBoardController.TEduBoardColor(0, 255, 0, 255);  
 initParam.smoothLevel = 0; // 用于指定笔迹平滑级别，默认值0.1，取值[0, 1]  
+  
+TICClassroomOption classroomOption = new TICClassroomOption();  
+classroomOption.classId = mRoomId;  
+classroomOption.boardCallback = mBoardCallback;  
+classroomOption.boardInitPara = initParam;
 
-//3、构造白板
-mBoard = new TEduBoardController(mAppContext);
-mBoard.addCallback(mBoardCallback);
-
-//4、调用白板初始化函数
-TEduBoardController.TEduBoardAuthParam authParam = new TEduBoardController.TEduBoardAuthParam(sdkAppId, userInfo.getUserId(), userInfo.getUserSig());
-mBoard.init(authParam, classId, initParam);
-
+mTicManager.joinClassroom(classroomOption, new TICManager.TICCallback());
 ```
 #### 获取白板视图
 在白板初始化成功后，`onTEBInit` 回调方法内获取白板 view 加入显示视图中：
@@ -211,11 +209,11 @@ mBoard.nextBoard(resetStep); // 白板向后翻页。
 | 增加转码文件 | addTranscodeFile| onTEBAddTranscodeFile| 
 | 删除文件 | deleteFile| onTEBDeleteFile| 
 | 切换文件 | switchFile| onTEBSwitchFile| 
-| 获取当前文件 ID | getCurrentFile|
-| 获取指定的文件信息 | getFileInfo|  
-| 获取白板中上传的所有文件的文件信息列表 | getFileInfoList|  
-| 获取指定文件的白板 ID 列表 | getFileBoardList|
-| 清空指定文件的所有白板涂鸦 | clearFileDraws| 
+| 获取当前文件 ID | getCurrentFile|无
+| 获取指定的文件信息 | getFileInfo| 无
+| 获取白板中上传的所有文件的文件信息列表 | getFileInfoList|  无
+| 获取指定文件的白板 ID 列表 | getFileBoardList|无
+| 清空指定文件的所有白板涂鸦 | clearFileDraws| 无
 
 ####  文件列表获取
 - 每个文件（想象成一个 PPT 文件）由全局唯一的文件 ID 标识，若需要获取当前白板所属的文件 ID，您可以调用白板控制器的 `GetCurrentFile` 接口。
