--- a/PaaS/Docs/文档转码.md
+++ b/PaaS/Docs/文档转码.md
@@ -194,7 +194,7 @@ Body 参数（JSON 格式）
 | task_id    | string | 任务的唯一标识 ID                                                                         |
 | status     | string | 任务状态                                                                                                                         |
 | progress   | int    | 0-100的整数表示转码当前进度                                                |
-| result_url | string | 转码结果，如果是 PPT 动态转码结果为 H5 页面 URL，如果是静态转码结果为转码后静态图片的文件路径，</br>请将此结果配合白板 SDK 的`addTranscodeFile`接口使用，有效期3个月 |
+| result_url | string | 转码结果，如果是 PPT 动态转码结果为 H5 页面 URL，如果是静态转码结果为转码后静态图片的文件路径，请将此结果配合白板 SDK 的`addTranscodeFile`接口使用，有效期3个月 |
 | resolution | string | 文档的分辨率                                                |
 | pages      | int    | 文档的总页数                                                                                                                      |
 | title      | string | 文档的文件名
@@ -330,7 +330,7 @@ Body 参数（JSON 格式）
 | task_type  | string | 文档转码任务类型固定为`transcode`  |
 | status     | string | 任务状态                         |
 | progress   | int    | 0-100的整数表示转码当前进度        |
-| result_url | string | 转码结果，如果是 PPT 动态转码结果为 H5 页面 URL，如果是静态转码结果为转码后静态图片的文件路径，</br>请将此结果配合白板 SDK 的`addTranscodeFile`接口使用，有效期3个月 |
+| result_url | string | 转码结果，如果是 PPT 动态转码结果为 H5 页面 URL，如果是静态转码结果为转码后静态图片的文件路径，请将此结果配合白板 SDK 的`addTranscodeFile`接口使用，有效期3个月 |
 | resolution | string | 文档的分辨率                      |
 | title      | string | 文档的文件名                      |
 | pages      | int    | 文档的总页数                      |
@@ -476,7 +476,7 @@ Body 参数（JSON 格式）
 | 20003 | 参数解析失败        | 根据 error_msg 查询具体的请求参数异常信息，更正参数缺失/类型错误等     |
 | 20004 | 设置回调地址格式错误 | 检查回调地址是否正确                                            |
 | 20005 | 数据读取失败        | 请检查请求中的 TaskId 或联系客服人员                               |
-| 20090-20099 | 内部错误     | 请联系客服人员                                                 |
+| 20090 - 20099 | 内部错误     | 请联系客服人员                                                 |
 
 ## ppt 演示文稿课件格式建议
 
